[tool.poetry]
name = "consulates"
version = "0.1.0"
description = ""
authors = ["Bence Nagy <bence@underyx.me>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.1"
pandas = "^1.3.0"
dask = {extras = ["distributed"], version = "^2022.7.1"}
requests-html = "^0.10.0"
arrow = "^1.1.1"
PyPDF2 = "^2.9.0"
camelot-py = "^0.10.1"
dnspython = "^2.1.0"
nbconvert = "^6.5.0"

# https://github.com/jupyter/nbconvert/issues/1742#issuecomment-1112438431
Jinja2 = "<3.1"

# these two required per https://github.com/camelot-dev/camelot/blob/644bbe7c6d57b95aefa2f049a9aacdbc061cc04f/setup.py#L27
ghostscript = ">=0.7"
opencv-python = ">=3.4.2.17"

[tool.poetry.dev-dependencies]
ipykernel = "^6.0.3"
bokeh = "^2.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
