[tool.poetry]
name = "nvc-backlog"
version = "0.1.0"
description = ""
authors = ["Bence Nagy <bence@underyx.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
arrow = "^1.1.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
