[tool.poetry]
name = "nvc-backlog"
version = "0.1.0"
description = ""
authors = ["Bence Nagy <bence@underyx.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
arrow = "^1.1.0"
requests = "^2.25.1"
dnspython = "^2.1.0"
types-requests = "^2.27.30"

[tool.poetry.dev-dependencies]
types-requests = "^2.27.30"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
